fix: improve container default size and remove max-width from full-bleed

--- a/src/Utilities/_Container.scss
+++ b/src/Utilities/_Container.scss
@@ -4,7 +4,7 @@
 // https://smolcss.dev/
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-$container-max: var(--container-max, 80ch) !default;
+$container-max: var(--container-max, 120ch) !default;
 $container-margin: var(--container-margin, 3rem) !default;
 
 .container {
